--- a/src/ui/scss/component/_markdown-preview.scss
+++ b/src/ui/scss/component/_markdown-preview.scss
@@ -86,7 +86,7 @@
     font-size: var(--font-label);
     padding: calc(var(--spacing-miniscule) - 4px) var(--spacing-miniscule);
 
-    [data-mode='dark'] & {
+    [theme='dark'] & {
       color: darken($lbry-white, 10%);
       background-color: rgba($lbry-gray-4, 0.25);
     }
