--- a/src/ui/scss/component/_tooltip.scss
+++ b/src/ui/scss/component/_tooltip.scss
@@ -1,7 +1,6 @@
 [data-reach-tooltip] {
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     color: var(--dm-color-01);
     background-color: $lbry-black;
-    border-color: $border-color--dark;
   }
 }
