--- a/src/ui/scss/component/_button.scss
+++ b/src/ui/scss/component/_button.scss
@@ -51,8 +51,8 @@
 }
 
 .button--inverse {
-  border-color: $lbry-teal-4;
-  color: $lbry-teal-5;
+  border-color: var(--color-link);
+  color: var(--color-link);
 
   &:hover {
     color: $lbry-white;
@@ -61,11 +61,6 @@
       stroke: $lbry-white;
     }
   }
-
-  [data-mode='dark'] & {
-    border-color: $lbry-teal-4;
-    color: $lbry-teal-3;
-  }
 }
 
 .button--alt {
@@ -73,7 +68,7 @@
 }
 
 .button--link {
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     color: $lbry-teal-4;
 
     &:hover {
@@ -103,7 +98,7 @@
       color: $lbry-teal-3;
     }
 
-    [data-mode='dark'] & {
+    [theme='dark'] & {
       color: $lbry-teal-4;
       &:hover {
         color: $lbry-teal-3;
