--- a/src/ui/scss/component/_card.scss
+++ b/src/ui/scss/component/_card.scss
@@ -1,15 +1,10 @@
 .card {
-  background-color: $lbry-white;
+  background-color: var(--color-card-background);
   margin-bottom: var(--spacing-large);
   position: relative;
   border-radius: var(--card-radius);
-  box-shadow: var(--card-box-shadow) $lbry-gray-1;
+  box-shadow: var(--card-box-shadow) var(--color-box-shadow);
   overflow: hidden;
-
-  [data-mode='dark'] & {
-    background-color: var(--dm-color-05);
-    box-shadow: var(--card-box-shadow) darken($lbry-gray-1, 80%);
-  }
 }
 
 .card--disabled {
@@ -45,10 +40,6 @@
   &:last-of-type {
     margin-bottom: 0;
   }
-
-  [data-mode='dark'] & {
-    border-color: var(--dm-color-03);
-  }
 }
 
 .card--claim-preview-wrap {
@@ -56,9 +47,6 @@
   margin: var(--spacing-xlarge) 0;
   min-width: 35rem;
 }
-
-//  C A R D
-//  A C T I O N S
 
 .card__actions {
   display: flex;
@@ -90,9 +78,6 @@
   justify-content: center;
 }
 
-//  C A R D
-//  L I S T
-
 .card__list {
   column-count: 2;
   column-gap: var(--spacing-medium);
@@ -103,9 +88,6 @@
     margin: 0 0 var(--spacing-medium);
   }
 }
-
-//  C A R D
-//  M E S S A G E
 
 .card__message {
   border-left: 0.5rem solid;
@@ -132,9 +114,6 @@
   border-color: $lbry-green-3;
 }
 
-//  C A R D
-//  S U B T I T L E
-
 .card__subtitle {
   margin: var(--spacing-small) 0;
   padding: var(--spacing-small);
@@ -143,7 +122,7 @@
   background-color: rgba($lbry-blue-1, 0.1);
   color: darken($lbry-gray-5, 15%);
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     background-color: var(--dm-color-04);
     color: inherit;
   }
@@ -153,13 +132,10 @@
   @extend .card__subtitle;
   background-color: $lbry-yellow-1;
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     background-color: rgba($lbry-yellow-1, 0.1);
   }
 }
-
-//  C A R D
-//  T I T L E
 
 .card__title {
   display: flex;
@@ -199,13 +175,7 @@
 .card__main-actions {
   padding: var(--spacing-large);
   background-color: var(--color-card-actions);
-  color: darken($lbry-gray-5, 15%);
   font-size: var(--font-body);
-
-  [data-mode='dark'] & {
-    background-color: var(--color-card-actions--dark);
-    color: inherit;
-  }
 }
 
 .card__body--with-icon,
