--- a/src/ui/scss/component/_comments.scss
+++ b/src/ui/scss/component/_comments.scss
@@ -13,7 +13,7 @@
   &:not(:last-of-type) {
     border-bottom: 1px solid var(--lbry-gray-1);
 
-    [data-mode='dark'] & {
+    [theme='dark'] & {
       border-color: rgba($lbry-gray-5, 0.2);
     }
   }
