--- a/src/ui/scss/component/_file-render.scss
+++ b/src/ui/scss/component/_file-render.scss
@@ -23,7 +23,7 @@
   overflow: auto;
   background-color: $lbry-white;
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     background-color: transparent;
   }
 
