--- a/src/ui/scss/component/_modal.scss
+++ b/src/ui/scss/component/_modal.scss
@@ -11,7 +11,7 @@
   position: fixed;
   z-index: 9999;
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     background-color: rgba($lbry-black, 0.7);
   }
 }
