--- a/src/ui/scss/component/menu-button.scss
+++ b/src/ui/scss/component/menu-button.scss
@@ -16,15 +16,8 @@
   display: block;
   white-space: nowrap;
   outline: none;
-  background-color: $lbry-white;
-  border: 1px solid $lbry-gray-1;
+  background-color: var(--color-menu-background);
   border-top: none;
-
-  [data-mode='dark'] & {
-    background-color: var(--dm-color-05);
-    color: $lbry-white;
-    border-color: var(--dm-color-03);
-  }
 }
 
 [data-reach-menu-item] {
@@ -38,43 +31,25 @@
   color: inherit;
   font: inherit;
   text-decoration: initial;
+
+  .icon {
+    stroke: $lbry-gray-4;
+  }
 }
 
 [data-reach-menu-item][data-selected] {
-  background: lighten($lbry-teal-5, 55%);
-  color: darken($lbry-teal-5, 15%);
-  outline: none;
+  background-color: var(--color-menu-background--active);
 
   &:active {
-    background-color: $lbry-teal-4;
-    color: $lbry-white;
-    .icon {
-      stroke: $lbry-white;
-    }
-  }
-
-  [data-mode='dark'] & {
-    background-color: $lbry-teal-5;
-    color: $lbry-white;
-
-    &:hover,
-    &:focus {
-      .icon {
-        stroke: $lbry-white;
-      }
-    }
+    background-color: var(--color-menu-background--selected);
   }
 }
 
 .menu__list--header {
   margin-top: -1px;
   margin-left: calc(var(--spacing-medium) * -1);
-  box-shadow: var(--card-box-shadow--attached) $lbry-gray-1;
+  box-shadow: var(--card-box-shadow--attached) var(--color-box-shadow);
   animation: menu-animate-in var(--animation-duration) var(--animation-style);
-
-  [data-mode='dark'] & {
-    box-shadow: var(--card-box-shadow) $lbry-black;
-  }
 }
 
 .menu__link {
@@ -84,28 +59,9 @@
   padding-right: var(--spacing-large);
 }
 
-.menu__title,
-.menu__link {
-  color: lighten($lbry-black, 20%);
-  color: $lbry-gray-5;
-
-  .icon {
-    stroke: $lbry-gray-5;
-  }
-
-  [data-mode='dark'] & {
-    color: $lbry-gray-2;
-
-    .icon {
-      stroke: $lbry-gray-2;
-    }
-  }
-}
-
 .menu__link {
   .icon {
     margin-right: var(--spacing-small);
-    stroke: $lbry-gray-4;
   }
 }
 
