--- a/src/ui/scss/component/tabs.scss
+++ b/src/ui/scss/component/tabs.scss
@@ -14,7 +14,7 @@
     margin-left: auto;
   }
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     background-color: darken($lbry-black, 5%);
   }
 }
