--- a/src/ui/scss/init/_gui.scss
+++ b/src/ui/scss/init/_gui.scss
@@ -14,23 +14,15 @@ html {
   min-height: 100%;
   overflow-x: hidden;
 
-  &[data-mode='dark'] {
-    background-color: var(--dm-color-08);
-  }
+  color: var(--color-text);
+  background-color: var(--color-background);
 }
 
 body {
-  color: $lbry-black;
   cursor: default;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  background-color: var(--color-background);
-
-  [data-mode='dark'] & {
-    background-color: var(--dm-color-08);
-    color: var(--dm-color-01);
-  }
 }
 
 h1,
@@ -122,7 +114,7 @@ hr {
   height: 1px;
   background-color: $lbry-gray-1;
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     background-color: var(--dm-color-04);
   }
 }
@@ -203,7 +195,7 @@ a {
   color: $lbry-red-3;
   font-weight: 600;
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     color: $lbry-red-1;
   }
 }
@@ -220,7 +212,7 @@ a {
   color: lighten($lbry-gray-5, 10%);
   margin-top: var(--spacing-small);
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     color: $lbry-gray-5;
   }
 }
@@ -228,7 +220,7 @@ a {
 .help--warning {
   background-color: $lbry-yellow-1;
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     color: $lbry-black;
   }
 }
@@ -237,7 +229,7 @@ a {
   color: $lbry-gray-5;
   font-style: italic;
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     color: inherit;
   }
 }
@@ -259,7 +251,7 @@ a {
 .error-text {
   color: $lbry-red-5;
 
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     color: $lbry-red-3;
   }
 }
@@ -275,13 +267,13 @@ a {
 
 fieldset,
 .fieldset {
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     border-top-color: var(--dm-color-04);
   }
 }
 
 legend {
-  [data-mode='dark'] & {
+  [theme='dark'] & {
     border-color: transparent;
   }
 }
