--- a/src/ui/scss/component/_file-render.scss
+++ b/src/ui/scss/component/_file-render.scss
@@ -21,11 +21,7 @@
 .file-render__viewer--document {
   @extend .file-render__viewer;
   overflow: auto;
-  background-color: $lbry-white;
-
-  [theme='dark'] & {
-    background-color: transparent;
-  }
+  background-color: var(--color-file-viewer-background);
 
   .markdown-preview {
     height: 100%;
