--- a/src/ui/scss/component/_form-field.scss
+++ b/src/ui/scss/component/_form-field.scss
@@ -41,34 +41,28 @@ textarea {
   padding-bottom: 0.1em;
 
   &::placeholder {
-    color: $lbry-gray-5;
+    color: var(--color-input-placeholder);
     opacity: 0.4;
-  }
-
-  [theme='dark'] & {
-    &::placeholder {
-      color: $lbry-white;
-    }
   }
 }
 
 // @lbry/components specificityfixme
+fieldset-section label,
 checkbox-element input[type='checkbox']:checked + label,
 checkbox-element input[type='checkbox'] + label {
-  color: lighten($lbry-black, 20%);
-
-  [theme='dark'] & {
-    color: $lbry-gray-1;
-  }
+  color: var(--color-text);
 }
 
 fieldset-section {
   margin: 0;
 
   input,
+  input[type='text'],
+  input[type='email'],
+  input[type='password'],
   select,
   textarea {
-    border-color: lighten($lbry-black, 20%);
+    border-color: var(--color-input-border);
     border-radius: var(--input-border-radius);
     background-color: var(--color-input-background);
     border-width: 1px;
@@ -77,11 +71,6 @@ fieldset-section {
   label {
     width: auto;
     text-transform: none;
-    color: lighten($lbry-black, 20%);
-
-    [theme='dark'] & {
-      color: $lbry-gray-3;
-    }
   }
 
   &:not(:first-of-type) {
@@ -115,14 +104,6 @@ radio-element {
     margin-bottom: 0;
     margin-left: var(--spacing-miniscule);
     font-size: var(--font-body);
-
-    [theme='dark'] & {
-      color: $lbry-gray-1;
-
-      &:hover {
-        color: $lbry-teal-4;
-      }
-    }
   }
 }
 
@@ -194,21 +175,17 @@ fieldset-group {
     fieldset-section:first-child {
       .form-field__prefix {
         white-space: nowrap;
-        padding: var(--spacing-miniscule);
+        padding: 0.2rem;
+        padding-left: 0.5rem;
         height: var(--input-height);
         padding-right: 0;
         border: 1px solid;
         border-top-left-radius: var(--input-border-radius);
         border-bottom-left-radius: var(--input-border-radius);
         border-right: 0;
-        border-color: $lbry-black;
-        color: $lbry-gray-4;
-        background-color: $lbry-white;
-
-        [theme='dark'] & {
-          background-color: var(--dm-color-03);
-          border-color: var(--dm-color-02);
-        }
+        border-color: var(--color-input-border);
+        color: var(--color-input-placeholder);
+        background-color: var(--color-input-background);
       }
     }
 
@@ -220,16 +197,15 @@ fieldset-group {
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
         padding-left: var(--spacing-xs);
+        border-color: var(--color-input-border);
 
         &:focus {
           border-image-slice: 1;
-          border-image-source: linear-gradient(to right, $lbry-black, $lbry-teal-5 5%);
-        }
-
-        [theme='dark'] & {
-          &:focus {
-            border-image-source: linear-gradient(to right, var(--dm-color-02), $lbry-teal-5 5%);
-          }
+          border-image-source: linear-gradient(
+            to right,
+            var(--color-input-border),
+            var(--color-input-border-active) 5%
+          );
         }
       }
     }
@@ -243,12 +219,10 @@ form {
     &.button--inverse {
       &:not(:hover) {
         background-color: transparent;
-        border-color: $lbry-black;
-        color: $lbry-black;
       }
 
       &:hover {
-        background-color: $lbry-teal-4;
+        background-color: var(--color-button-background);
       }
     }
   }
@@ -257,6 +231,9 @@ form {
 fieldset-section {
   input-submit {
     input {
+      &:focus {
+        border-color: var(--color-input-border-active);
+      }
       &:first-child {
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
@@ -266,10 +243,8 @@ fieldset-section {
 
     input[type='email'],
     input[type='text'] {
-      [theme='dark'] & {
-        &:not(:focus) {
-          border-color: $lbry-gray-5;
-        }
+      &:not(:focus) {
+        border-color: var(--color-input-border);
       }
     }
 
@@ -279,13 +254,8 @@ fieldset-section {
     .button[type='submit']:not(:hover) {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      border-color: $lbry-black;
+      border-color: var(--color-input-border);
       opacity: 1;
-
-      [theme='dark'] & {
-        border-color: $lbry-gray-5;
-        color: $lbry-white;
-      }
     }
   }
 
@@ -293,43 +263,16 @@ fieldset-section {
     max-width: 12em;
     background-position: 95% center;
     background-size: 1.2rem;
-
-    [theme='dark'] & {
-      option {
-        background-color: var(--color-input-background);
-      }
-    }
-  }
-
-  [theme='dark'] & {
-    input,
-    textarea,
-    select {
-      color: $lbry-white;
-    }
-
-    input:not(.form-field--copyable),
-    textarea,
-    select {
-      border-color: $lbry-gray-5;
-    }
+    color: var(--color-text);
   }
 }
 
 .form-field--copyable {
-  background-color: rgba($lbry-gray-1, 0.5);
-  border: 1px solid $lbry-gray-1;
-  color: $lbry-gray-5;
+  background-color: var(--color-input-background-copyable);
   padding: 0.2rem 0.75rem;
   text-overflow: ellipsis;
   user-select: text;
   cursor: default;
-
-  [theme='dark'] & {
-    background-color: rgba($lbry-white, 0.3);
-    border-color: $lbry-gray-5;
-    color: inherit;
-  }
 }
 
 .form-field__help {
