--- a/src/ui/scss/component/_modal.scss
+++ b/src/ui/scss/component/_modal.scss
@@ -3,21 +3,16 @@
   left: 0;
   bottom: 0;
   right: 0;
-
   align-items: center;
-  background-color: rgba($lbry-black, 0.7);
+  background-color: var(--color-background-overlay);
   display: flex;
   justify-content: center;
   position: fixed;
   z-index: 9999;
-
-  [theme='dark'] & {
-    background-color: rgba($lbry-black, 0.7);
-  }
 }
 
 .modal {
-  background-color: $lbry-white;
+  background-color: var(--color-card-background);
   line-height: 1.55;
   max-width: var(--modal-width);
   overflow: auto;
