--- a/src/ui/scss/component/_spinner.scss
+++ b/src/ui/scss/component/_spinner.scss
@@ -34,17 +34,13 @@
 
 .spinner--dark {
   .rect {
-    background-color: $lbry-black;
+    background-color: var(--color-spinner-dark);
   }
 }
 
 .spinner--light {
   .rect {
-    background-color: $lbry-white;
-
-    [theme='dark'] & {
-      background-color: var(--dm-color-01);
-    }
+    background-color: var(--color-spinner-light);
   }
 }
 
