--- a/src/ui/scss/component/_wunderbar.scss
+++ b/src/ui/scss/component/_wunderbar.scss
@@ -19,11 +19,7 @@
     height: 100%;
     position: absolute;
     z-index: 1;
-    stroke: $lbry-gray-5;
-
-    [theme='dark'] & {
-      stroke: $lbry-gray-3;
-    }
+    stroke: var(--color-input-placeholder);
   }
 }
 
@@ -39,13 +35,8 @@
 }
 
 .wunderbar__active-suggestion {
-  background-color: lighten($lbry-blue-1, 15%);
-  color: $lbry-black;
-
-  [theme='dark'] & {
-    background-color: $lbry-blue-4;
-    color: inherit;
-  }
+  color: var(--color-search-suggestion);
+  background-color: var(--color-search-suggestion-background);
 }
 
 .wunderbar__input {
