--- a/src/ui/scss/component/_button.scss
+++ b/src/ui/scss/component/_button.scss
@@ -15,10 +15,12 @@
 }
 
 .button--primary {
-  background-color: $lbry-teal-5;
+  &:not(:hover) {
+    background-color: var(--color-button-background);
+  }
 
   &:hover {
-    background-color: $lbry-teal-4;
+    background-color: var(--color-button-background-hover);
   }
 
   &:active {
@@ -51,7 +53,7 @@
 }
 
 .button--inverse {
-  border-color: var(--color-link);
+  border: 1px solid var(--color-link);
   color: var(--color-link);
 
   &:hover {
