--- a/src/ui/scss/component/section.scss
+++ b/src/ui/scss/component/section.scss
@@ -65,6 +65,7 @@
 
 .section__subtitle--status {
   @extend .section__subtitle;
+  padding: var(--spacing-small);
   background-color: var(--color-text-warning);
 }
 
