--- a/src/ui/scss/themes/dark.scss
+++ b/src/ui/scss/themes/dark.scss
@@ -32,7 +32,7 @@
   --color-spinner-dark: #212529;
 
   /* Lists */
-  --color-list-border: #4e5862;
+  --color-border: #4e5862;
 
   /* Input */
   --color-input-color: #eeeeee;
