--- a/src/ui/scss/all.scss
+++ b/src/ui/scss/all.scss
@@ -4,6 +4,8 @@
 @import '~@lbry/components/sass/init/_mixins.scss';
 @import '~@lbry/components/sass/init/_variables.scss';
 @import '~@lbry/components/sass/init/_reset.scss';
+@import 'themes/light.scss';
+@import 'themes/dark.scss';
 @import 'init/vars';
 @import 'init/mixins';
 @import 'init/type';
