--- a/src/ui/scss/component/_card.scss
+++ b/src/ui/scss/component/_card.scss
@@ -151,8 +151,8 @@
 
 .card__main-actions {
   padding: var(--spacing-large);
-  background-color: var(--color-card-actions);
   font-size: var(--font-body);
+  border-top: 1px solid var(--color-border);
 }
 
 .card__body--with-icon,
