--- a/src/ui/scss/component/_claim-list.scss
+++ b/src/ui/scss/component/_claim-list.scss
@@ -1,6 +1,6 @@
 .claim-list {
   .claim-preview {
-    border-bottom: 1px solid var(--color-list-border);
+    border-bottom: 1px solid var(--color-border);
   }
 }
 
@@ -10,11 +10,11 @@
   min-height: 4.5rem;
   padding: var(--spacing-medium);
   font-size: var(--font-body);
-  border-bottom: 1px solid var(--color-list-border);
+  border-bottom: 1px solid var(--color-border);
 
   border-top-left-radius: var(--card-radius);
   border-top-right-radius: var(--card-radius);
-  background-color: var(--color-card-actions);
+  background-color: var(--color-list-header);
 
   & > *:not(:last-child) {
     margin-right: 0.5rem;
@@ -100,7 +100,7 @@
 }
 
 .claim-preview--channel:not(.claim-preview--inline) {
-  background-color: var(--color-card-actions);
+  background-color: var(--color-card-background-highlighted);
 }
 
 .claim-preview--visited {
