--- a/src/ui/scss/component/_comments.scss
+++ b/src/ui/scss/component/_comments.scss
@@ -11,7 +11,7 @@
   padding: var(--spacing-small) 0;
 
   &:not(:last-of-type) {
-    border-bottom: 1px solid var(--color-list-border);
+    border-bottom: 1px solid var(--color-border);
   }
 }
 
