--- a/src/ui/scss/component/_table.scss
+++ b/src/ui/scss/component/_table.scss
@@ -6,7 +6,7 @@ table,
   margin: var(--spacing-small) 0;
 
   th {
-    border-bottom: 2px solid var(--color-list-border);
+    border-bottom: 2px solid var(--color-border);
   }
 
   th,
@@ -21,7 +21,7 @@ table,
   tr {
     &:not(:last-of-type) {
       td {
-        border-bottom: 1px solid var(--color-list-border);
+        border-bottom: 1px solid var(--color-border);
       }
     }
   }
