--- a/src/ui/scss/init/_gui.scss
+++ b/src/ui/scss/init/_gui.scss
@@ -111,7 +111,7 @@ code {
 hr {
   width: 100%;
   height: 1px;
-  background-color: var(--color-list-border);
+  background-color: var(--color-border);
 }
 
 img,
